# mimiclaw

./: .gitignore  AGENTS.md  CMakeLists.txt  build.sh  ceedling_env.sh  config.json  config.json.example  project.yml  test_confirm4.sh  test_wechat_login.sh  ws_mg_test
.github/workflows/: build.yml  release.yml
cmake/: compiler_options.cmake  third_party.cmake
docs/: ARCHITECTURE.md  Architecture.md  REFACTORING_PLAN.md  api.md  architecture_refactor_plan.md  context.md  dashscope_compliance.md  debug.md  feishu_websocket_analysis.md  http_streaming_design.md  mcp.md  mcp_debug.md  quickstart.md  subagent.md  system-prompt-building.md  tool_confirmation_implementation.md  wechat.md
main/: CMakeLists.txt  main.c  main_posix.c  mimi.c  mimi_config.h
main/agent/: agent_async.c  agent_async.h  agent_async_loop.c  agent_async_loop.h  agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
main/agent/context/: context_assembler.c  context_assembler.h  context_budget_plan.c  context_budget_plan.h  context_builder.c  context_builder.h  context_compact.c  context_compact.h  context_hook.h
main/agent/control/: control_manager.c  control_manager.h
main/agent/subagent/: subagent_config.c  subagent_config.h  subagent_manager.c  subagent_manager.h  subagent_runtime.c  subagent_runtime.h  subagent_task.c  subagent_task.h
main/agent/tools/: tool_bash.c  tool_bash.h  tool_call_context.c  tool_call_context.h  tool_cron.c  tool_cron.h  tool_exec.c  tool_exec.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_mcp_refresh.c  tool_mcp_refresh.h  tool_provider.c  tool_provider.h  tool_registry.c  tool_registry.h  tool_subagent.c  tool_subagent.h  tool_subagents.c  tool_subagents.h  tool_web_search.c  tool_web_search.h
main/app/: app.c  app.h
main/bus/: message_bus.c  message_bus.h
main/channels/: channel.h  channel_manager.c  channel_manager.h
main/channels/cli/: cli_channel.c  cli_channel.h  terminal_stdio.c  terminal_stdio.h
main/channels/feishu/: feishu_card_model.c  feishu_card_model.h  feishu_cards.c  feishu_cards.h  feishu_channel.c  feishu_channel.h  feishu_channel_old.c  feishu_media.c  feishu_media.h  feishu_priv.h  feishu_startup.c  feishu_startup.h  feishu_ws.c  feishu_ws.h
main/channels/qq/: qq_channel.c  qq_channel.h
main/channels/telegram/: telegram_channel.c  telegram_channel.h
main/channels/websocket/: ws_channel.c  ws_channel.h
main/channels/wechat/: wechat_channel.c  wechat_channel.h  wechat_login.c  wechat_login.h
main/channels/ws_service/: ws_service_channel.c  ws_service_channel.h
main/cli/: cli.md  cli_core.c  cli_core.h  cli_terminal.c  cli_terminal.h  editor.c  editor.h  stdio_cli_posix.c  stdio_cli_posix.h
main/commands/: cmd_ask.c  cmd_exit.c  cmd_help.c  cmd_memory.c  cmd_session.c  cmd_set.c  command.h  command_registry.c  command_registry.h
main/config/: config.c  config.h  workspace_bootstrap.c  workspace_bootstrap.h
main/core/bus/: message_bus.c  message_bus.h
main/core/config/: config.c  config.h  config_internal.h  config_view.c  config_view.h  workspace_bootstrap.c
main/core/platform/: exec.c  exec.h  kv.h  log.c  log.h  path_utils.c  path_utils.h  queue.c  queue.h  runtime.c  runtime.h
main/core/platform/os/freertos_impl/: CMakeLists.txt  FreeRTOSConfig.h  freertos_hooks.c  os_freertos.c
main/cron/: cron_service.c  cron_service.h
main/gateway/: gateway.c  gateway.h  gateway_manager.c  gateway_manager.h  ws_server.c  ws_server.h
main/gateway/http/: http_client_gateway.c  http_client_gateway.h  http_gateway.c  http_gateway.h
main/gateway/stdio/: stdio_gateway.c  stdio_gateway.h
main/gateway/websocket/: ws_client_gateway.c  ws_client_gateway.h  ws_gateway.c  ws_gateway.h  ws_server_gateway.c  ws_server_gateway.h
main/heartbeat/: heartbeat.c  heartbeat.h
main/interface/cli/: cli_terminal.c  cli_terminal.h  editor.c  lowdown_render.c  lowdown_render.h
main/interface/commands/: cmd_exit.c  cmd_mcp.c  cmd_mcp_refresh.c  cmd_session.c  cmd_set.c  cmd_wechat_login.c  command_registry.c  command_registry.h
main/interface/router/: router.c  router.h
main/llm/: llm_proxy copy.c  llm_proxy.c  llm_proxy.h
main/memory/: memory_store.c  memory_store.h  session_mgr.c  session_mgr.h
main/platform/: fs.h  http.h  kv.c  kv.h  log.c  log.h  mimi_err.c  mimi_err.h  mimi_time.c  mimi_time.h  os.h  path_utils.h  queue.c  queue.h  random.c  random.h  runtime.c  runtime.h
main/platform/event/: event_bus.c  event_bus.h  event_dispatcher.c  event_dispatcher.h  io_buf.c  io_buf.h  io_buf_pool.c  io_buf_pool.h  io_chain.c
main/platform/fs/: fs.c  fs.h
main/platform/http/: http.h
main/platform/os/: os.h
main/platform/posix_impl/: fs_posix.c  http_posix.c  kv_posix.c  log_posix.c  mimi_err_posix.c  os_posix.c  queue_posix.c  random_posix.c  time_posix.c
main/platform/websocket/: websocket.c  websocket.h
main/proxy/: http_proxy.c
main/router/: router.c
main/services/cron/: cron_service.c
main/services/heartbeat/: heartbeat.c
main/skills/: skill_loader.c  skill_loader.h
main/telegram/: telegram_bot.c  telegram_bot.h
main/tools/: tool_cron.c  tool_cron.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_registry.c  tool_registry.h  tool_web_search.c  tool_web_search.h
main/wifi/: wifi_manager.c
scripts/: beautify_trace.py  jsonl_to_md.py
spiffs/skills/: daily-briefing.md  skill-creator.md
test/: test_context_compact_integration.c  test_context_full_integration.c  test_session_mgr_order.c  test_subagent_llm_mock.c  test_template_detection.c  test_tool_exec.c  test_tool_files.c  test_tool_registry.c
test/integration/: README.md  conftest.py  requirements.txt  run_tests.py  run_tests.sh  test_config.json  test_controller.py  test_file_creation_execution.py  test_mcp_http_server.py  test_mcp_integration.py  test_mcp_server.py  test_runner.py  virtual_llm_server.py
test/support/: tool_registry_stubs.c
test/test_support/: fff_mocks.h
test/wechat_mcp/: README.md  conftest.py  test_wechat_mcp.py  virtual_llm_server.py
tools/: ws_mg_test.c
(+39 files in other folders)
